# tutorial-haartraining

./: INSTALL.txt  ProjectHome.md  README.md
HaarTraining/src/: Makefile.am  _cvhaartraining.h.win  cvclassifier.h  facedetect.c  haartraining.cpp  mergevec.cpp  performance.cpp  vec2img.cpp
data/: Acknowledgement.txt
result/: haarcascade_frontalface_alt2.performance_cmu_tests.txt  haarcascade_frontalface_alt2.performance_umist_tests.txt  haarcascade_frontalface_cbcl1.performance_cmu_tests.txt  haarcascade_frontalface_cbcl1.sh  haarcascade_frontalface_pie1.command.txt  haarcascade_frontalface_pie1.performance_cmu_tests.txt  haarcascade_frontalface_pie1.sh  haarcascade_frontalface_pie1.xml  haarcascade_frontalface_pie2.command.txt  haarcascade_frontalface_pie2.performance_pie_tests.txt  haarcascade_frontalface_pie2.sh  haarcascade_frontalface_pie3.performance_cmu_tests.txt  haarcascade_frontalface_pie3.result.txt  haarcascade_frontalface_pie3.xml  haarcascade_frontalface_pie4.performance_cmu_tests.txt  haarcascade_frontalface_pie4.sh  haarcascade_frontalface_pie4.xml  haarcascade_frontalface_pie5.performance_cmu_tests.txt  haarcascade_frontalface_pie5.sh  haarcascade_frontalface_pie5.xml  haarcascade_frontalface_pie6.performance_cmu_tests.txt  haarcascade_frontalface_pie6.sh  haarcascade_pie_1_command.txt  haarcascade_pie_2.xml  haarcascade_pie_2_command.txt  haarcascade_pie_4_command.txt  haarcascade_pie_4_result.txt  haarcascade_pie_frontalface_alt_result.txt  haarcascade_profileface.performance_cmu_tests.txt  haarcascade_profileface.umist_tests.result.txt  (+3 more)
(+4727 files in other folders)
